syntax = "proto3";

message content{
  string content_name = 1;
}